# microblog_fastapi

./: Containerfile  README.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
app/: db.py  forms.py  main.py  models.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 07b4c1917df1_users_table.py  1c744454130f_add_posts_table_and_relationship_with_.py
app/templates/: base.jinja-html  index.jinja-html  login.jinja-html
