[project]
name = "microblog_fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "letuanhai", email = "letuanhai@live.com"},
]
dependencies = [
    "fastapi==0.110.1",
    "pydantic==2.6.4",
    "uvicorn==0.29.0",
    "python-multipart==0.0.9",
    "Jinja2==3.1.3",
    "SQLAlchemy==2.0.29",
    "Starlette-WTF==0.4.3",
    "WTForms==3.1.2",
    "alembic==1.13.1",
]
requires-python = ">=3.12.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.23.0",
]
